Update to translations of dhyana and the four dhyana descriptions

--- a/01_agama/madhyama/MA_003.md
+++ b/01_agama/madhyama/MA_003.md
@@ -81,16 +81,16 @@ next: MA_004.html
 22\. “Furthermore, the noble disciple cultivates wisdom. He observes the law of arising and decline and attains the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the seventh good quality attained by the noble disciple.
 {: #p22}
 
-23\. “How does a noble disciple acquire four progressive mental states, which are easy and not difficult to attain? The noble disciple parts with desire and bad and unskillful things. With perception and examination, this seclusion produces joy and happiness, and he accomplishes and dwells in the first dhyāna. This is called the first progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+23\. “How does a noble disciple acquire four progressive mental states, which are easy and not difficult to attain? The noble disciple is secluded from desires and secluded from bad and unskillful things. While they notice and examine things, this seclusion produces joy and happiness in them, and they accomplish and dwell in the first meditation. This is called the first progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
 {: #p23}
 
-24\. “Furthermore, once perception and examination have stopped, the noble disciple has an inner stillness and unified mind. Without perception or examination, this samādhi produces joy and happiness, and he accomplishes and dwells in the second dhyāna. This is called the second progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+24\. “Furthermore, once noticing and examining things has subsided, the noble disciple has inner calm and a unified mind. Without noticing or examining things, this <em>samādhi</em> produces joy and happiness, and they accomplish and dwell in the second meditation. This is called the second progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
 {: #p24}
 
-25\. “Furthermore, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by noble people as the noble equanimity, mindfulness, happy abiding, and emptiness, and he accomplishes and dwells in the third dhyāna. This is called the third progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+25\. “Furthermore, parting with desire for that joy, the noble disciple lives in equanimity and pursues nothing. With right mindfulness and right knowledge, they personally experience happiness, about which the noble ones teach them the noble’s happy abiding place of detachment and mindfulness. They accomplish and dwell in the third meditation. This is called the third progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
 {: #p25}
 
-26\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he accomplishes and dwells in the fourth dhyāna. This is called the fourth progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+26\. “Furthermore, the noble disciple’s pleasure ceases and their pain ceases. Their past joy and sorrow having ceased, they feel neither pain nor pleasure. With the purification of their equanimity and mindfulness, they accomplish and dwell in the fourth meditation. This is called the fourth progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
 {: #p26}
 
 27\. “Thus, the noble disciple attains seven good qualities and acquires four progressive mental states that are easy and not difficult to attain. King Māra won’t get an advantage over him, and he won’t follow bad and unskillful things. Not being stained by defilements, he’ll no longer be subject to birth.
@@ -119,16 +119,16 @@ next: MA_004.html
 34\. “Suppose the king’s border city builds a high wall, making it quite strong and coating it with whitewash. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple cultivates wisdom. He observes the law of arising and decline and attains the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the noble disciple attaining the wall of wisdom, which removes what’s bad and unskillful and cultivates good qualities.
 {: #p34}
 
-35\. “Suppose the king’s border city provides for a reserve of water, hay, and firewood. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple parts with desire and bad and unskillful things. With perception and examination, this seclusion produces joy and happiness, and he accomplishes and dwells in the first dhyāna. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
+35\. “Suppose the king’s border city provides for a reserve of water, hay, and firewood. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple is secluded from desires and secluded from bad and unskillful things. While they notice and examine things, this seclusion produces joy and happiness in them, and they accomplish and dwell in the first meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
 {: #p35}
 
-36\. “Suppose the king’s border city harvests much rice and stockpiles barley. Those inside the city are made secure, and external enemies are kept at bay. Thus, once perception and examination have stopped, the noble disciple has an inner stillness and unified mind. Without perception or examination, this samādhi produces joy and happiness, and he accomplishes and dwells in the second dhyāna. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
+36\. “Suppose the king’s border city harvests much rice and stockpiles barley. Those inside the city are made secure, and external enemies are kept at bay. Thus, once noticing and examining things has subsided, the noble disciple has inner calm and a unified mind. Without noticing or examining things, this <em>samādhi</em> produces joy and happiness, and they accomplish and dwell in the second meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
 {: #p36}
 
-37\. “Suppose the king’s border city stockpiles calabash beans, green grams, and lentils. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by noble people as the noble equanimity, mindfulness, happy abiding, and emptiness, and he accomplishes and dwells in the third dhyāna. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
+37\. “Suppose the king’s border city stockpiles calabash beans, green grams, and lentils. Those inside the city are made secure, and external enemies are kept at bay. Thus, parting with desire for that joy, the noble disciple lives in equanimity and pursues nothing. With right mindfulness and right knowledge, they personally experience happiness, about which the noble ones teach them the noble’s happy abiding place of detachment and mindfulness. They accomplish and dwell in the third meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
 {: #p37}
 
-38\. “Suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, all of which are plentiful. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he accomplishes and dwells in the fourth dhyāna. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.”
+38\. “Suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, all of which are plentiful. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple’s pleasure ceases and their pain ceases. Their past joy and sorrow having ceased, they feel neither pain nor pleasure. With the purification of their equanimity and mindfulness, they accomplish and dwell in the fourth meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.”
 {: #p38}
 
 39\. Thus did the Buddha speak. The monks who heard what the Buddha taught rejoiced and approved.
@@ -146,7 +146,7 @@ next: MA_004.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
