--- a/01_agama/madhyama/MA_031.md
+++ b/01_agama/madhyama/MA_031.md
@@ -236,7 +236,7 @@ next: MA_041.html
 67\. “Good men, what is right mindfulness? When the noble disciple is mindful that suffering is suffering … formation is formation … cessation is cessation … when he’s mindful that the path is the path, he might examine what he has done in the past, train in the mindfulness of deeds, see the danger of deeds, or see the stillness of nirvāṇa. When he’s mindful without attachment and observes the liberation of good thoughts, then his mind follows mindfulness and doesn’t give attention to what’s contrary to it. Being fully mindful, recollecting, further recollecting, and not forgetting what should be remembered is called right mindfulness.
 {:#p67}
 
-68\. “Good men, what is right samādhi? When the noble disciple is mindful that suffering is suffering … formation is formation … cessation is cessation … when he’s mindful that the path is the path, he might examine what he has done in the past, train in the mindfulness of deeds, see the danger of deeds, or see the stillness of nirvāṇa. When he’s mindful without attachment and observes the liberation of good thoughts, then if he abides his mind, abides meditation, abides following, he isn’t confused or distracted. To be collected, calm, and rightly concentrated is called right samādhi.
+68\. “Good men, what is right <em>samādhi</em>? When the noble disciple is mindful that suffering is suffering … formation is formation … cessation is cessation … when he’s mindful that the path is the path, he might examine what he has done in the past, train in the mindfulness of deeds, see the danger of deeds, or see the stillness of nirvāṇa. When he’s mindful without attachment and observes the liberation of good thoughts, then if he abides his mind, abides in meditation, abides in following, he isn’t confused or distracted. To be collected, calm, and rightly concentrated is called right <em>samādhi</em>.
 {:#p68}
 
 69\. “Good men, this noble truth of the path to suffering’s cessation in the past and these noble truths of the path to suffering’s cessation in the future and present are true and not false. They don’t part from this, and they are not mistaken. They are true and completely genuine. Union with such truth is possessed, known, seen, comprehended, obtained, and completely awakened to by the noble ones. Therefore, it’s called the noble truth of the path to suffering’s cessation.”
@@ -262,7 +262,7 @@ Of suffering, formation, cessation, and the path.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
