--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -25,7 +25,7 @@ next: MA_075.html
 4\. The Bhagavān then roused from that <em>samādhi</em> and praised Venerable Aniruddha. “Good, Aniruddha, good! You were in a peaceful place sitting in reflection. In your mind, you thought, ‘The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness.’
 {: #p4}
 
-5\. “Aniruddha, you could accept an additional eighth thought of a great man from the Tathāgata. Accepting it, reflect that the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity. Aniruddha, if you accomplish these eight thoughts of a great man, you’ll surely be able to part with desire and part with bad and unskillful things … accomplish and dwell in the fourth dhyāna.
+5\. “Aniruddha, you could accept an additional eighth thought of a great man from the Tathāgata. Accepting it, reflect that the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity. Aniruddha, if you accomplish these eight thoughts of a great man, you’ll surely be able to be secluded from desires and secluded from bad and unskillful things … you’ll accomplish and dwell in the fourth meditation.
 {: #p5}
 
 #### Eight Similes about the Eight Thoughts
@@ -89,7 +89,7 @@ next: MA_075.html
 24\. “How does the path come from right mindfulness and isn’t obtained by wrong mindfulness? A monk contemplates inner body as body … contemplates inner feelings … mind … principles as principles. This is how the path comes from right mindfulness and isn’t obtained by wrong mindfulness.
 {: #p24}
 
-25\. “How does the path come from a concentrated mind and isn’t obtained by a distracted mind? A monk parts with desire and parts with bad and unskillful things … accomplishes and dwells in the fourth dhyāna. This is how the path comes from a concentrated mind and isn’t obtained by a distracted mind.
+25\. “How does the path come from a concentrated mind and isn’t obtained by a distracted mind? A monk is secluded from desires and secluded from bad and unskillful things … they accomplish and dwell in the fourth meditation. This is how the path comes from a concentrated mind and isn’t obtained by a distracted mind.
 {: #p25}
 
 26\. “How does the path come from wisdom and isn’t obtained from foolishness? A monk cultivates wisdom. He contemplates the law of arising and decay and attains the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is how the path comes from wisdom and isn’t obtained from foolishness.
@@ -146,7 +146,7 @@ That parinirvāṇa without remainder.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
