--- a/01_agama/madhyama/MA_078.md
+++ b/01_agama/madhyama/MA_078.md
@@ -184,14 +184,14 @@ Brahmā said to the Bhagavān, “Great sage, if you want to conceal your form, 
 1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0547a09" target="_blank">T26.1.547a9-9b1</a>. The direct parallel to this <em>sūtra</em> is [MN 49](https://suttacentral.net/mn49){: target="_blank"}. [\[Back\]](#ref1)
 2. {: #n2} <em>entertainer spirits</em>. This may be a translation of gandharva or kiṃnara, which were both mythical spirits who served as musicians in the Heavens. [\[back\]](#ref2)
 3. {: #n3} <em>Lord Creator</em>. This is a translation of Prajāpati, an early Vedic creator god sometimes called the “Lord of Progeny.” It appears here to be a title belonging to Brahmā. [\[back\]](#ref3)
-4. {: #n4} <em>Radiance gods, pure radiance gods, and pervasive and pure radiance gods</em>. These are presumably three Heavens of the second dhyāna in the Brahma Heavens. [\[back\]](#ref4)
-5. {: #n5} <em>Avṛha … Atapa</em>. These two additions are also names of Brahma Heavens. The Chinese translates them literally as “Without Affliction” and “Without Heat.” They are among the Heavens of the fourth dhyāna. [\[back\]](#ref5)
+4. {: #n4} <em>Radiance gods, pure radiance gods, and pervasive and pure radiance gods</em>. These are presumably three Heavens of the second meditation in the Brahma Heavens. [\[back\]](#ref4)
+5. {: #n5} <em>Avṛha … Atapa</em>. These two additions are also names of Brahma Heavens. The Chinese translates them literally as “Without Affliction” and “Without Heat.” They are among the Heavens of the fourth meditation. [\[back\]](#ref5)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
