--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -152,7 +152,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 41\. “Good men, after I was staying in a peaceful place, perhaps under a tree or in an empty and peaceful dwelling, I spread out my sitting mat and sat down crossed-legged. With upright posture and correct intent, I avoided what was contrary to mindfulness and put a stop to longing. Without any arguing, I saw another’s property and requirements for living without longing or wanting them for myself. I wished to make myself attain that, so I purified my mind and rid it of longing. <em>So it was with hatred, drowsiness, regret, and doubt.</em> It not having any resemblance to good qualities, I purified my mind and rid it of doubt.
 {: #p41}
 
-42\. “Good men, after I had stopped these five hindrances and mental defilements that weaken wisdom, I parted with desire and parted with bad and unskillful things … accomplished and dwelled in the fourth dhyāna.
+42\. “Good men, after I had stopped these five hindrances and mental defilements that weaken wisdom, I was secluded from desires and secluded from bad and unskillful things … I accomplished and dwelled in the fourth meditation.
 {: #p42}
 
 43\. “Good men, after I had attained a concentrated mind in this way, I was pure, undefiled, untroubled, flexible, and abided well. I attained an imperturbable mind and learned to realize the supernormal abilities and penetrating knowledges.
@@ -260,7 +260,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 June 2022
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
