--- a/01_agama/madhyama/MA_081.md
+++ b/01_agama/madhyama/MA_081.md
@@ -217,7 +217,7 @@ The monks answered, “No, Bhagavān. Why is that? They won’t obtain fire by r
 60\. “Furthermore, a monk produces the three bad thoughts, which are thoughts of desire, thoughts of anger, and thoughts of harmfulness. If these three bad thoughts arise, his mind never attaches to them. This is the fourth virtue of someone who cultivates mindfulness of body and disseminates it in this way.
 {: #p60}
 
-61\. “Furthermore, that monk parts with desire and parts with bad and unskillful things … and attains the accomplishment of the fourth dhyāna. This is the fifth … eighth virtue of someone who cultivates mindfulness of body and disseminates it in this way.
+61\. “Furthermore, that monk is secluded from desires and secluded from bad and unskillful things … they accomplish and dwell in the fourth meditation. This is the fifth … eighth virtue of someone who cultivates mindfulness of body and disseminates it in this way.
 {: #p61}
 
 62\. “Furthermore, once he has ended the three bonds, that monk becomes a stream entrant and doesn’t fall into bad states. He’s certainly destined for right awakening and will experience at most seven existences. After seven rebirths up in heaven or among humans, he’ll reach the limit of suffering. This is the ninth virtue of someone who cultivates mindfulness of body and disseminates it in this way.
@@ -248,7 +248,7 @@ The monks answered, “No, Bhagavān. Why is that? They won’t obtain fire by r
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
