--- a/01_agama/madhyama/MA_082.md
+++ b/01_agama/madhyama/MA_082.md
@@ -34,7 +34,7 @@ They answered, “No. Why is that? If that cow is tethered with a rope, it might
 7\. “Good men, perhaps there’s a person who is conscientious, modest, affectionate, and respectful when they’re in the presence of the Bhagavān or the senior and elder practitioners of the religious life. They’re then well-guarded and well-protected. Suppose later they’re not in the presence of the Bhagavān or practitioners of the religious life with whom they’re conscientious, modest, affectionate, and respectful. They often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path. Good men, this is called one person.
 {:#p7}
 
-8\. “Furthermore, good men, perhaps there’s a person who attains the first dhyāna. After they attain the first dhyāna, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path.
+8\. “Furthermore, good men, perhaps there’s a person who attains the first meditation. After they attain the first meditation, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path.
 {:#p8}
 
 9\. “Good men, it’s like when there’s a rainstorm. The lakes and ponds between villages fill up with water. Where once sand, stones, weeds, trees, crustaceans, fish, turtles, frogs, and other water creatures were seen when people coming and going walk or stand nearby, none are seen after they fill up with water.
@@ -45,10 +45,10 @@ They answered, “No. Why is that? If that cow is tethered with a rope, it might
 
 They answered, “No. Why is that? The water in those lakes and ponds will recede later because elephants, horses, camels, cattle, donkeys, pigs, deer, or water buffalo will drink it. It may be people will take it, or the wind and sun will dry it up. Where before sand, stones, weeds, trees, crustaceans, fish, turtles, frogs, and other water creatures were seen when people coming and going walk or stand nearby, they will be seen again after the water recedes.”
 
-11\. “So it is, good men. Perhaps there’s a person who attains the first dhyāna. After they attain the first dhyāna, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path. Good men, this is called another person.
+11\. “So it is, good men. Perhaps there’s a person who attains the first meditation. After they attain the first meditation, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path. Good men, this is called another person.
 {:#p11}
 
-12\. “Furthermore, good men, perhaps there’s a person who attains the second dhyāna. After they attain the second dhyāna, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path.
+12\. “Furthermore, good men, perhaps there’s a person who attains the second meditation. After they attain the second meditation, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path.
 {:#p12}
 
 13\. “Good men, it’s like when there’s a rainstorm and the dirt in the crossroads turns to mud. Good men, if someone were to say that the mud in the crossroads will never dry up and turn back to dirt, would they be right to say that?”
@@ -56,10 +56,10 @@ They answered, “No. Why is that? The water in those lakes and ponds will reced
 
 They answered, “No. Why is that? The crossroads will be walked upon by elephants, horses, camels, cattle, donkeys, pigs, deer, water buffalo, and people. The wind will blow on it, and the sun will bake it. After the mud in the crossroads has dried up, it will turn back into dirt.”
 
-14\. “So it is, good men. Perhaps there’s a person who attains the second dhyāna. After they attain the second dhyāna, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path. Good men, this is called another person.
+14\. “So it is, good men. Perhaps there’s a person who attains the second meditation. After they attain the second meditation, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path. Good men, this is called another person.
 {:#p14}
 
-15\. “Furthermore, good men, perhaps there’s a person who attains the third dhyāna. After they attain the third dhyāna, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path.
+15\. “Furthermore, good men, perhaps there’s a person who attains the third meditation. After they attain the third meditation, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path.
 {:#p15}
 
 16\. “Good men, it’s like the water in the pool of a mountain spring that’s clear, pure, and has level banks. Being still and undisturbed, it has no waves or ripples. Good men, suppose someone were to say the water in the pool of that mountain spring will never again move or have any waves. Would they be right to say that?”
@@ -67,10 +67,10 @@ They answered, “No. Why is that? The crossroads will be walked upon by elephan
 
 The friends answered, “No. Why is that? A strong wind might come from the east and blow on the surface of that pool, disturb it, and create waves. In the same way, a strong wind might come from the south, west, or north and blow on the surface of that pool, disturb it, and create waves.”
 
-17\. “So it is, good men. Perhaps there’s a person who attains the third dhyāna. After they attain the third dhyāna, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path. Good men, this is called another person.
+17\. “So it is, good men. Perhaps there’s a person who attains the third meditation. After they attain the third meditation, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path. Good men, this is called another person.
 {:#p17}
 
-18\. “Furthermore, good men, perhaps there’s a person who attains the fourth dhyāna. After they attain the fourth dhyāna, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path.
+18\. “Furthermore, good men, perhaps there’s a person who attains the fourth meditation. After they attain the fourth meditation, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path.
 {:#p18}
 
 19\. “Good men, it’s like a householder or a householder’s son who eats a fine meal that fills him up and satisfies him. Where before he wanted to eat, now he no longer desires it. Good men, suppose someone were to say that that householder or householder’s son will never want another meal. Would they be right to say that?”
@@ -78,7 +78,7 @@ The friends answered, “No. Why is that? A strong wind might come from the east
 
 They answered, “No. Why is that? After a night has passed, that householder or householder’s son will go back to wanting a meal even if he had no use for food the day before.”
 
-20\. “So it is, good men. Perhaps there’s a person who attains the fourth dhyāna. After they attain the fourth dhyāna, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path. Good men, this is called another person.
+20\. “So it is, good men. Perhaps there’s a person who attains the fourth meditation. After they attain the fourth meditation, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path. Good men, this is called another person.
 {:#p20}
 
 21\. “Furthermore, good men, perhaps there’s a person who obtains the <em>samādhi</em> without conceptual thought. After they attain the <em>samādhi</em> without conceptual thought, then they abide calmly and no longer seek to obtain desires that they have yet to obtain, to seize desires they haven’t seized, or to consummate desires they haven’t consummated. After that, they often meet with white-robed people who joke with each other, are arrogant, and clamor in various ways. After they have often met with white-robed people who joke with each other, are arrogant, and clamor in various ways, their mind readily becomes desirous. After their mind becomes desirous, then their body and mind become obsessed. After their body and mind become obsessed, then they discard the precepts and take a break from the path.
@@ -111,7 +111,7 @@ Citra’s friends answered, “No. Why is that? After a night has passed and the
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
