--- a/01_agama/madhyama/MA_084.md
+++ b/01_agama/madhyama/MA_084.md
@@ -20,7 +20,7 @@ next: MA_085.html
 3\. The Licchavis of Vaiśālī heard that the Bhagavān had traveled to Vaiśālī to stay near the tall pagoda on the bank of the Markaṭa River. They then thought, “We’d better use great spiritual abilities and the authority of the king to make an announcement: ‘Let’s leave Vaiśālī and go to the Bhagavān to offer support and pay homage to him.’”[\[4\]](#n4){:#ref4}
 {:#p3}
 
-4\. Those famous, elder, and senior great disciples heard those Licchavis of Vaiśālī use great spiritual abilities and the authority of the king to make an announcement: ‘Let’s leave Vaiśālī and go to the Bhagavān to offer support and pay homage to him.’ The disciples thought, “Sound is the thorn for dhyāna. The Bhagavān also says that sound is the thorn for dhyāna. We ought to go to the Gośṛṅga Sal Grove and stay where there aren’t any disturbances. We’ll be secluded and alone there, staying in a quiet abode in a peaceful place, sitting in repose, and reflecting.”
+4\. Those famous, elder, and senior great disciples heard those Licchavis of Vaiśālī use great spiritual abilities and the authority of the king to make an announcement: ‘Let’s leave Vaiśālī and go to the Bhagavān to offer support and pay homage to him.’ The disciples thought, “Sound is the thorn for meditation. The Bhagavān also says that sound is the thorn for meditation. We ought to go to the Gośṛṅga Sal Grove and stay where there aren’t any disturbances. We’ll be secluded and alone there, staying in a quiet abode in a peaceful place, sitting in repose, and reflecting.”
 {:#p4}
 
 5\. Thereupon, those famous, elder, and senior great disciples went to Gośṛṅga Sal Grove and stayed where there weren’t any disturbances. They were secluded and alone, staying in a quiet abode in a peaceful place, sitting in repose, and reflecting.
@@ -38,16 +38,16 @@ next: MA_085.html
 9\. Not long after those Licchavis had departed, the Bhagavān asked the monks, “Where did the elder and senior great disciples go?”
 {:#p9}
 
-10\. The monks said, “Bhagavān, the elder and senior great disciples heard those Licchavis use great spiritual abilities and the authority of the king to make an announcement: ‘Let’s leave Vaiśālī and go to the Buddha to offer support and pay homage to him.’ They thought, ‘Sound is the thorn for dhyāna. The Bhagavān also says that sound is the thorn for dhyāna. We ought to go to the Gośṛṅga Sal Grove and stay where there aren’t any disturbances. We’ll be secluded and alone there, staying in a quiet abode in a peaceful place, sitting in repose, and reflecting.’ Bhagavān, the elder and senior great disciples went there together.”
+10\. The monks said, “Bhagavān, the elder and senior great disciples heard those Licchavis use great spiritual abilities and the authority of the king to make an announcement: ‘Let’s leave Vaiśālī and go to the Buddha to offer support and pay homage to him.’ They thought, ‘Sound is the thorn for meditation. The Bhagavān also says that sound is the thorn for meditation. We ought to go to the Gośṛṅga Sal Grove and stay where there aren’t any disturbances. We’ll be secluded and alone there, staying in a quiet abode in a peaceful place, sitting in repose, and reflecting.’ Bhagavān, the elder and senior great disciples went there together.”
 {:#p10}
 
-11\. The Bhagavān sighed in admiration upon hearing this and said, “Good, good! Those elder and senior great disciples should say, ‘Sound is the thorn for dhyāna. The Bhagavān also says that sound is the thorn for dhyāna.’ Why is that?[\[5\]](#n5){:#ref5}
+11\. The Bhagavān sighed in admiration upon hearing this and said, “Good, good! Those elder and senior great disciples should say, ‘Sound is the thorn for meditation. The Bhagavān also says that sound is the thorn for meditation.’ Why is that?[\[5\]](#n5){:#ref5}
 {:#p11}
 
-12\. “I really do say that dhyāna has this thorn. For someone observing precepts, violating a precept is a thorn. For someone guarding their faculties, an adorned body is a thorn. For someone contemplating the foul discharges, cleanliness is a thorn. For someone cultivating kindness, anger is a thorn. For someone avoiding alcohol, drinking liquor is a thorn. For someone practicing celebacy, a woman’s form is a thorn.
+12\. “I really do say that meditation has this thorn. For someone observing precepts, violating a precept is a thorn. For someone guarding their faculties, an adorned body is a thorn. For someone contemplating the foul discharges, cleanliness is a thorn. For someone cultivating kindness, anger is a thorn. For someone avoiding alcohol, drinking liquor is a thorn. For someone practicing celebacy, a woman’s form is a thorn.
 {:#p12}
 
-13\. “For someone entering the first dhyāna, sound is a thorn. For someone entering the second dhyāna, perception and examination are thorns. For someone entering the third dhyāna, joy is a thorn. For someone entering the fourth dhyāna, breathing in and out is a thorn.
+13\. “For someone entering the first meditation, sound is a thorn. For someone entering the second meditation, noticing and examining things are thorns. For someone entering the third meditation, joy is a thorn. For someone entering the fourth meditation, breathing in and out is a thorn.
 {:#p13}
 
 14\. “For someone entering the abode of space, perception of form is a thorn. For someone entering the abode of consciousness, perception of the abode of space is a thorn. For someone entering the abode of nothingness, perception of the abode of consciousness is a thorn. For someone entering the abode of no perception, perception of the abode of nothingness is a thorn. For someone entering the cessation of perceptions and experience samādhi[\[6\]](#n6){:#ref6}, perceptions and experience are thorns.
@@ -77,7 +77,7 @@ The others seem clear enough: <em>Cāla.</em> C. <span class="ch">遮羅</span>,
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 November 2022
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
