--- a/01_agama/madhyama/MA_085.md
+++ b/01_agama/madhyama/MA_085.md
@@ -67,13 +67,13 @@ The monks then accepted the teaching and listened.
 18\. “The way of a genuine person is to make this observation: ‘It’s not because I … know the season that I’ll abandon lust, anger, and delusion. Suppose a person who doesn’t … know the season [were to leave home and train on the path.] They practice the Dharma according to the Dharma, conform themselves to the Dharma, and go from one thing to the next.’ For this reason, they get offerings of support and respect. Proceeding to attain the true Dharma in this way, a person doesn’t esteem themselves and denigrate others. This is the way of a genuine person.
 {:#p18}
 
-19\. “Furthermore, suppose a person achieves the first dhyāna. Because that person achieves the first dhyāna, they esteem themselves and denigrate others. This is the way of a disingenuous person.
+19\. “Furthermore, suppose a person achieves the first meditation. Because that person achieves the first meditation, they esteem themselves and denigrate others. This is the way of a disingenuous person.
 {:#p19}
 
-20\. “The way of a genuine person is to make this observation: ‘The Bhagavān has said that this first dhyāna has measureless kinds. If someone supposes something about it, this is craving.[\[6\]](#n6){:#ref6}’ For this reason, they get offerings of support and respect. Proceeding to attain the true Dharma in this way, a person doesn’t esteem themselves and denigrate others. This is the way of a genuine person.
+20\. “The way of a genuine person is to make this observation: ‘The Bhagavān has said that this first meditation has measureless kinds. If someone supposes something about it, this is craving.[\[6\]](#n6){:#ref6}’ For this reason, they get offerings of support and respect. Proceeding to attain the true Dharma in this way, a person doesn’t esteem themselves and denigrate others. This is the way of a genuine person.
 {:#p20}
 
-21\. “Furthermore, perhaps there’s a person who attains the second … third … fourth dhyāna … attain the abode of space … abode of consciousness … abode of nothingness … abode of neither having conception nor having no conception, but for others this isn’t the case. Because they attain the abode of neither having conception nor having no conception, they esteem themselves and denigrate others. This the way of a disingenuous person.
+21\. “Furthermore, perhaps there’s a person who attains the second … third … fourth meditation … attain the abode of space … abode of consciousness … abode of nothingness … abode of neither having conception nor having no conception, but for others this isn’t the case. Because they attain the abode of neither having conception nor having no conception, they esteem themselves and denigrate others. This the way of a disingenuous person.
 {:#p21}
 
 22\. “The way of a genuine person is to make this observation: ‘… The Bhagavān has said that this abode of neither having conception nor having no conception has measureless kinds. If someone supposes something about it, this is craving.’ For this reason, they attain offerings of support and respect. Proceeding to attain the true Dharma in this way, a person doesn’t esteem themselves and denigrate others. This is the way of a genuine person.
@@ -87,7 +87,7 @@ The monks then accepted the teaching and listened.
 
 * {:.verse}The noble, handsome, and eloquent,\\
 The elder and reciter of sūtras,\\
-Robes, food, undisturbed, dhyāna,\\
+Robes, food, undisturbed, meditation,\\
 And last are four formless attainments.
 
 ---
@@ -106,7 +106,7 @@ And last are four formless attainments.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 8 April 2023
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
