--- a/01_agama/madhyama/MA_146.md
+++ b/01_agama/madhyama/MA_146.md
@@ -159,25 +159,25 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 45\. “After he’s staying in a peaceful place, perhaps under a tree or in an empty and peaceful dwelling, he spreads out his sitting mat and sits down crossed-legged. With correct posture and correct intent, he avoids what’s contrary to mindfulness and puts a stop to longing. Without any arguing, he sees another’s property and requirements for living without longing or wanting them for himself. He purifies his mind and rids it of longing. Thus … hatred … drowsiness … regret … doubt. It not having any resemblance to good qualities, he purifies his mind and rids it of doubt.
 {:#p45}
 
-46\. “After he has stopped these five hindrances and mental defilements that weaken wisdom, he parts with desires and bad, unskillful things. With perception and examination, this seclusion gives rise joy and happiness, and he accomplishes and dwells in the first dhyāna.
+46\. “After he has stopped these five hindrances and mental defilements that weaken wisdom, he’s secluded from desires and secluded from bad and unskillful things. While he notices and examines things, this seclusion produces joy and happiness in him, and he accomplishes and dwells in the first meditation.
 {:#p46}
 
 47\. “Priest, this is what’s exhausted by the Tathāgata, what’s practiced by the Tathāgata, and what’s worn by the Tathāgata. Still, this isn’t entirely what makes the Bhagavān a Tathāgata, Arhat, and Completely Awakened One, nor why the Bhagavān’s teaching is good and the Tathāgata’s disciples are a noble assembly that’s well destined.
 {:#p47}
 
-48\. “After his perception and examination stops, he’s internally stilled, and his mind is unified. Without perception or examination, samādhi gives rise to joy and happiness, and he accomplishes and dwells in the second dhyāna.
+48\. “Once noticing and examining things has subsided, he has inner calm and a unified mind. Without noticing or examining things, this <em>samādhi</em> produces joy and happiness, and he accomplishes and dwells in the second meditation.
 {:#p48}
 
 49\. “Priest, this is what’s exhausted by the Tathāgata, what’s practiced by the Tathāgata, and what’s worn by the Tathāgata. Still, this isn’t entirely what makes the Bhagavān a Tathāgata, Arhat, and Completely Awakened One, nor why the Bhagavān’s teaching is good and the Tathāgata’s disciples are a noble assembly that’s well destined.
 {:#p49}
 
-50\. “He parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness that’s described by the nobles and that’s the noble’s equanimity, mindfulness, happy abode, and emptiness. He accomplishes and dwells in the third dhyāna.
+50\. “Parting with desire for that joy, he lives in equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences happiness, about which the noble ones teach him the noble’s happy abiding place of detachment and mindfulness. He accomplishes and dwells in the third meditation.
 {:#p50}
 
 51\. “Priest, this is what’s exhausted by the Tathāgata, what’s practiced by the Tathāgata, and what’s worn by the Tathāgata. Still, this isn’t entirely what makes the Bhagavān a Tathāgata, Arhat, and Completely Awakened One, nor why the Bhagavān’s teaching is good and the Tathāgata’s disciples are a noble assembly that’s well destined.
 {:#p51}
 
-52\. “His pleasure and pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he accomplishes and dwells in the fourth dhyāna.
+52\. “His pleasure ceases and their pain ceases. His past joy and sorrow having ceased, he feels neither pain nor pleasure. With the purification of his equanimity and mindfulness, he accomplishes and dwells in the fourth meditation.
 {:#p52}
 
 53\. “Priest, this is what’s exhausted by the Tathāgata, what’s practiced by the Tathāgata, and what’s worn by the Tathāgata. Still, this isn’t entirely what makes the Bhagavān a Tathāgata, Arhat, and Completely Awakened One, nor why the Bhagavān’s teaching is good and the Tathāgata’s disciples are a noble assembly that’s well destined.
@@ -211,14 +211,14 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 ---
 
 ### Notes
-1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0656a14" target="_blank">T26.1.656a14-8a27</a>. This <em>sūtra</em> is parallel to [MN 27](https://suttacentral.net/mn27){: target="_blank"}. A large part (§ [18-56](#p18)) of this sūtra is also parallel with MĀ 80 (§ [14-43](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p14){: target="_blank"} and § [55](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p55){: target="_blank"}) and a couple other MĀ sūtras that recite the gradual path. The main difference between these two sūtras is that MĀ 80 gives a full description of the supernormal powers, while MĀ 146 gives a full description of the four dhyānas. This material is itself parallel to the stock description of a monk’s training found in several Pali suttas including MN 27. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0656a14" target="_blank">T26.1.656a14-8a27</a>. This <em>sūtra</em> is parallel to [MN 27](https://suttacentral.net/mn27){: target="_blank"}. A large part (§ [18-56](#p18)) of this sūtra is also parallel with MĀ 80 (§ [14-43](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p14){: target="_blank"} and § [55](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p55){: target="_blank"}) and a couple other MĀ sūtras that recite the gradual path. The main difference between these two sūtras is that MĀ 80 gives a full description of the supernormal powers, while MĀ 146 gives a full description of the four meditations. This material is itself parallel to the stock description of a monk’s training found in several Pali suttas including MN 27. [\[back\]](#ref1)
 2. {:#n2} The Chinese translates his name as “Born Hearing” (生聞), which agrees with the P. Jāṇussoṇi, but I have not found a S. attestation for this name yet. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
