--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -256,7 +256,7 @@ That’s never been turned in the world before.’
 61\. “Five monks, they are like the wild deer that gets free of a trap. You should know that it doesn’t follow the hunter and won’t itself make the hunter. The deer won’t fall into the hunter’s hands or get entangled in the hunter’s net, so when the hunter comes it’ll be able to get free. So it is, five monks. The well-versed noble disciple meets good friends, knows the noble teaching, and then they are steered by the noble teaching. They don’t come into contact with these five desires, aren’t defiled, aren’t greedy, and aren’t attached to them. They aren’t conceited and don’t accept or enter them. They see the danger and the escape when taking and making use [of these things]. You should know that they don’t follow corrupt Māra and don’t themselves make Māra. Noble disciples don’t fall into Māra’s hands, get entangled in Māra’s net, and aren’t caught by Māra’s trap. They are freed from Māra’s trap.
 {:#p61}
 
-62\. “Five monks, when a Tathāgata arises in the world who is an Arhat, Rightly and Completely Enlightened One and who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and who’s called the Buddha, the Blessed One, he ends … the five hindrances, mental defilement, and weakness of wisdom. He parts with desire and parts with bad and unwholesome things … accomplishes and dwells in the fourth dhyāna. Thus, his concentrated mind is pure, without defilement, and without disturbance. It’s flexible and well-abiding, and he attains an imperturbable mental state. He cultivates the end of contaminants and realizes the penetrating knowledges.
+62\. “Five monks, when a Tathāgata arises in the world who is an Arhat, Rightly and Completely Enlightened One and who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and who’s called the Buddha, the Blessed One, he ends … the five hindrances, mental defilement, and weakness of wisdom. He’s secluded from desires and secluded from bad and unskillful things … he accomplishes and dwells in the fourth meditation. Thus, his concentrated mind is pure, without defilement, and without disturbance. It’s flexible and well-abiding, and he attains an imperturbable mental state. He cultivates the end of contaminants and realizes the penetrating knowledges.
 {:#p62}
 
 63\. “He knows as it really is, ‘This is suffering.’ He knows as it really is, ‘This is suffering’s accumulation.’ He knows as it really is, ‘This is the suffering’s cessation.’ He knows as it really is, ‘This is the path to suffering’s cessation.’ He knows as it really is, ‘These are contaminants.’ He knows, ‘This is the accumulation of contaminants.’ He knows, ‘This is the cessation of contaminants.’ He knows, ‘This is the path to the cessation of contaminants.’ He thus knows and thus sees liberation from the mind’s contaminants of desire and liberation from the mind’s contaminants of existence and ignorance.
@@ -287,7 +287,7 @@ That’s never been turned in the world before.’
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 19 June 2022
+Last Revised: 14 October 2024
 {: .revised}
 
 ---
