--- a/01_agama/madhyama/MA_041.md
+++ b/01_agama/madhyama/MA_041.md
@@ -47,7 +47,7 @@ next: MA_042.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.484c23'>「『手長者有定者。』此何因說？ 手長者離欲、離惡不善之法⋯至⋯得第四禪成就遊。 『手長者有定者。』因此故說。</td>
-    <td id='p9'>9. “Why do I say, ‘The prominent man Hastaka is settled’? Hastaka secludes himself from desires and bad and unskillful things … and accomplishes the fourth <em>dhyāna</em>. This is why I say, ‘The prominent man Hastaka is settled.’</td>
+    <td id='p9'>9. “Why do I say, ‘The prominent man Hastaka is settled’? Hastaka is secluded from desires and secluded from bad and unskillful things … he accomplishes and dwells in the fourth meditation. This is why I say, ‘The prominent man Hastaka is settled.’</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.484c25'>「『手長者有慧者。』此何因說？ 手長者修行智慧。 觀興衰法，得如此智。 聖慧明達、分別、曉了。 以正盡苦。 『手長者有慧者。』因此故說。 『手長者有八未曾有法者。』因此故說。」</td>
@@ -80,7 +80,7 @@ next: MA_042.html
 In AN 8.23, the seven qualities of Hatthaka are that he was faithful (P. <em>saddho</em>), ethical (<em>sīlavā</em>), conscientious (<em>hirīmā</em>), prudent (<em>ottappī</em>), learned (<em>bahussuto</em>), generous (<em>cāgavā</em>), and wise (<em>paññavā</em>). When the Buddha learns of Hatthaka’s modesty about being praised in this way, he adds an eight quality of having few desires.<br/>
 In the present <em>sūtra</em>, he is said to possess eight qualities: He had few desires (<span class="ch">少欲</span>) and was faithful (<span class="ch">有信</span>), modest (<span class="ch">有慚</span>), conscientious (<span class="ch">有愧</span>), diligent (<span class="ch">有精進</span>), mindful (<span class="ch">有念</span>), settled (<span class="ch">有定</span>), and wise (<span class="ch">有慧</span>).<br/>
 These two lists have five items in common, which are few desires (P. <em>appicchatāyā</em>), faith (P. <em>saddha</em>, <span class="ch">信</span>), conscience/modesty (<em>hirī</em>, <span class="ch">慚</span>), prudence/conscience (<em>ottappa</em>, <span class="ch">愧</span>), and wisdom (<em>pañña</em>, <span class="ch">慧</span>). AN 8.23 includes three other items that one might expect for a almsgiving layperson: ethics, generosity, and learnedness. MĀ 41 has instead three items that we might expect from a full pracitioner: diligence, mindfulness, and settledness (i.e., <em>samādhi</em>).<br/>
-This and similar <em>sūtra</em>s praising prominent laymen (e.g., MĀ 39) explicitly depict them as accomplishing the four <em>dhyāna</em>s, something that seems not to happen in Pali sources. There must have been different expectations of laypeople among Sarvāstivādins compared to Theravādins. We should also consider the possible influence of the “retired layman <em>bodhisattva</em>” concept that developed. E.g., the Buddha teaches the layman Ugra about this practice in <cite>Mahāratnakūṭa</cite> No. 19 (T310.11.472b7-80b28). [<a href="#ref1">back</a>]</li>
+This and similar <em>sūtra</em>s praising prominent laymen (e.g., MĀ 39) explicitly depict them as accomplishing the four meditations, something that seems not to happen in Pali sources. There must have been different expectations of laypeople among Sarvāstivādins compared to Theravādins. We should also consider the possible influence of the “retired layman <em>bodhisattva</em>” concept that developed. E.g., the Buddha teaches the layman Ugra about this practice in <cite>Mahāratnakūṭa</cite> No. 19 (T310.11.472b7-80b28). [<a href="#ref1">back</a>]</li>
 <li id="n2"><span class="ch">阿邏鞞伽邏在惒林</span> (EMC.
 •a-la-bei-k‘ie-la-dzəi-ɦua-lɪəm = Pr. <em>aḷavi</em> + <em>[a]gaḷa</em> + “to be at” + <em>va</em> + “grove”?), P. <em>āḷaviyaṁ viharati aggāḷave cetiye</em>. It would appear that the C. found here and in MĀ 40 may have suffered some confusion, with <span class="ch">在</span> (“was at”) being misplaced or inserted. If we remove <span class="ch">在</span>, the expression <span class="ch">阿邏鞞伽邏惒</span> could easily be read as a translit. of <em>aḷavi</em> (<span class="ch">阿邏鞞</span>) and <em>[a]gaḷava</em> (<span class="ch">伽邏惒</span>), which is plausible as a Prakrit equivalent of the two Pali place names. Perhaps the passage should instead read <span class="ch">佛遊阿邏鞞，在(阿)伽邏惒林</span>. Assuming this is the case, I’ve adopted the S. equivalents of these two Pali place names. [<a href="#ref2">back</a>]</li>
 <li id="n3"><em>the prominent man Hastaka</em>. C. <span class="ch">手長者</span>, G. <em>*hasta[ka]</em>, P. <em>hatthaka</em>, S. <em>hastaka</em>. The C. translates this layman’s name lit. as “hand,” which is the meaning of the Indic name. While he has no title in AN 8.23, he here is called a “prominent man” (C. <span class="ch">長者</span>, P. <em>seṭṭhi</em>, S. <em>śreṣṭhin</em>) rather than a “householder” (C. <span class="ch">居士</span>, S. <em>gṛhapati</em>, P. <em>gahapati</em>). “Prominent” here typically referred to being a well-to-do landowner or successful merchant. Such people, usu. men, were prominent members of a community but existed outside the political or religious heirarchy. [<a href="#ref3">back</a>]</li>
@@ -88,6 +88,6 @@ This and similar <em>sūtra</em>s praising prominent laymen (e.g., MĀ 39) expli
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 18 July 2024</p>
+<p class='revised'>Last Revised: 14 October 2024</p>
 
 <hr/>
